<resources>
    <string name="app_name">Dots</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_in_game_options">Options</string>
    <string name="title_activity_intermediate_highscore">High Score</string>
    <string name="title_activity_display_high_scores">High Score</string>
    <string name="title_activity_start_game_options">Game Options</string>

    <string name="board_size">Select Boardsize</string>
    <string name="theme">Select Theme</string>
    <string name="blind">Play in Color Blind Mode</string>

    <string name="dovy">Dovy Theme</string>
    <string name="gunnhildur">Gunnhildur Theme</string>

    <string name="blind_toggle">Color Blind Mode</string>

    <string name="move_mode">Move Mode</string>
    <string name="time_mode">Time Mode</string>

    <string name="clear_history">Clear!</string>
    <string name="title_activity_play_game">DOTS</string>

    <string name="select_mode">Select Mode:</string>
    <string name="display_score">Score: </string>

    <string name="shuffle_board">Shuffle!</string>
    <string name="title_activity_end_game">EndGameActivity</string>

    <string name="hello_world">Hello world!</string>

    <string name="final_score">Score</string>
    <string name="best_score">Best</string>
    <string name="explode_board">Explosion!</string>
    <string name="exploded_adjacent">Adjacent!</string>

</resources>
